    (Closes: #720941)
  * Update my email address.
  * Add zsnes-dbg, a package containing the debugging symbols.
    (Closes: #729969)
  * zsnes-linux-resume-freeze-fix.patch: do arithmetic on unsigned long long.
    Thanks to Cedric Dourneau (Closes: #740860).
  * Fix lintian errors:
  - privacy-breach-w3c-valid (remove links)
  - privacy-breach-donation (replace by DEP12)

 -- Etienne Millon <me@emillon.org>  Tue, 10 Sep 2013 10:09:25 +0200

zsnes (1.510+bz2-6) unstable; urgency=low

  [ Fabian Greffrath ]
  * 0001-gcc-fno-rtti.patch: Removed, one less deviation from upstream.
  * 0002-replace_crc32.patch: Removed, not actually needed at all.
  * 0013-Fix-sound-with-libao.patch: Replace with the actual patch from
    upstream SVN.
  * 0014-Initialize-driver_format.matrix-with-NULL.patch: Only keep the
    memset() part as discussed with upstream author Nach on the ZSNES board.
  * Set Architecture: any-i386.
  * Add CPPFLAGS to CFLAGS and CXXFLAGS to enable full hardening flags.
  * fortify-source.patch: New patch to fix compilation with FORTIFY_SOURCE.
    (Closes: #698990)

  [ Etienne Millon ]
  * Fix crashes on resume : use int64s instead of floats in sem_GetTicks().
    Thanks to Ian Munsie. (Closes: #687107)
  * Fix loading states with _FORTIFY_SOURCE enabled.
    Thanks to Nelson Elhage. (Closes: #712790)
  * Add keywords to desktop file.
  * Bump Standards-Version to 3.9.4 (no changes).
  * Canonicalize VCS-* fields.

 -- Etienne Millon <etienne.millon@gmail.com>  Sat, 20 Jul 2013 12:28:28 +0200

zsnes (1.510+bz2-5) unstable; urgency=low

  * Build zsnes without libao support for wheezy.
    libao has often been a source of trouble for zsnes. Without libao support
    it will fall back to the SDL audio driver. Furthermore it will make it
    possible to install the zsnes package via multi-arch (see #638741).

 -- Fabian Greffrath <fabian+debian@greffrath.com>  Fri, 02 Nov 2012 15:07:44 +0100

zsnes (1.510+bz2-4) unstable; urgency=low
